--- a/package.json
+++ b/package.json
@@ -23,5 +23,18 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AdmJacobs/ClickyGame.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AdmJacobs/ClickyGame/issues"
+  },
+  "homepage": "https://github.com/AdmJacobs/ClickyGame#readme"
 }
